[gd_scene load_steps=6 format=3 uid="uid://bni52xyvq24eq"]

[ext_resource type="Script" path="res://src/game/ui/menus/action_input.gd" id="1_ta6jq"]
[ext_resource type="AudioStream" uid="uid://b485vsqlu714c" path="res://assets/sound/UI/Minimalist7.ogg" id="2_agno0"]
[ext_resource type="AudioStream" uid="uid://drvygf7nu8s7v" path="res://assets/sound/UI/Minimalist10.ogg" id="3_xiw3e"]
[ext_resource type="FontFile" uid="uid://dam2qwebcbyev" path="res://assets/fonts/Roboto-Bold.ttf" id="4_ltvbx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ci6gd"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.193154, 0.193154, 0.193153, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
anti_aliasing = false

[node name="ActionInput" type="MarginContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_right = 76.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 5
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_ta6jq")
focus_sfx = ExtResource("2_agno0")
click_sfx = ExtResource("3_xiw3e")

[node name="Container" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ci6gd")

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 9
theme_override_constants/separation = 10
alignment = 1

[node name="Action" type="Label" parent="Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("4_ltvbx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input" type="Button" parent="Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="mouse_entered" from="Container/HBoxContainer/Input" to="." method="on_focus"]
[connection signal="pressed" from="Container/HBoxContainer/Input" to="." method="on_click"]
[connection signal="pressed" from="Container/HBoxContainer/Input" to="." method="_on_input_pressed"]
